# kaggle-tabular-forge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: README.md  agents.example.yaml  competition.example.yaml  experiment.example.yaml  feature_catalog.example.yaml  goal.example.yaml  model_zoo.example.yaml  paths.example.yaml  stacking.example.yaml
configs/eda/: p06_churn_eda.example.yaml
configs/ensembles/: p03_candidate_ensemble.example.yaml
configs/experiments/: p02_churn_lgbm_basic.example.yaml  p02_churn_logistic_basic.example.yaml
configs/features/: p06_freq_bundle.example.yaml
configs/goals/: p03_candidate_ensemble.goal.yaml  p04_candidate_factory.goal.yaml
configs/matrices/: p04_churn_candidate_factory.example.yaml
configs/proposals/: p06_freq_count.example.yaml
configs/schemas/: agents.schema.json  competition.schema.json  eda.schema.json  ensemble.schema.json  experiment.schema.json  feature_catalog.schema.json  feature_pipeline.schema.json  goal.schema.json  matrix.schema.json  model_zoo.schema.json  paths.schema.json  proposal.schema.json  stacking.schema.json
docs/: README.md  agent_integration.md  agent_protocol.md  artifact_contract.md  environment_notes.md  feature_catalog.md  goal_contract.md  kgmon_methodology.md  leakage-check-assumptions.md  leakage_rules.md  model_zoo.md  p00_project_foundation.md  p01_evidence_pipeline.md  p02_experiment_workbench.md  p03_candidate_ensemble.md  p04_candidate_factory.md  p05_stacking_foundation.md  p06_feature_workbench.md  stacking.md  testing_strategy.md
src/ktabforge/: __init__.py  (+2 more)
(+121 files in other folders)
