[project]
name = "kaggle-tabular-forge"
version = "0.1.0"
description = "Evidence-first toolkit for reusable Kaggle tabular competition workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4",
    "jsonschema>=4.23",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "typer>=0.12",
]

[project.optional-dependencies]
lgbm = [
    "lightgbm>=4.5",
]
xgb = [
    "xgboost>=2.1",
]
cat = [
    "catboost>=1.2",
]
gbdt = [
    "catboost>=1.2",
    "lightgbm>=4.5",
    "xgboost>=2.1",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.55",
    "tenacity>=9.0",
]
kaggle = [
    "kaggle>=1.6",
    "kagglehub>=0.3",
]
viz = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
ktab = "ktabforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ktabforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "local_data: requires local Kaggle data files",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
